chore: add and modify in zh-Hans/translation.json

--- a/client/src/locales/zh-Hans/translation.json
+++ b/client/src/locales/zh-Hans/translation.json
@@ -12,6 +12,9 @@
   "com_agents_description_placeholder": "可选：在此描述您的代理",
   "com_agents_enable_file_search": "启用文件搜索",
   "com_agents_file_search_disabled": "必须先创建Agent，才能上传文件用于文件搜索。",
+  "com_agents_file_context": "文件内容（OCR）",
+  "com_agents_file_context_disabled": "必须先创建Agent，才能上传文件以识别文件内容",
+  "com_agents_file_context_info": "Files uploaded as \"Context\" are processed using OCR to extract text, which is then added to the Agent's instructions. Ideal for documents, images with text, or PDFs where you need the full text content of a file",
   "com_agents_file_search_info": "启用后，系统会告知Agent以下列出的具体文件名，使其能够从这些文件中检索相关内容。",
   "com_agents_instructions_placeholder": "代理使用的系统指令",
   "com_agents_missing_provider_model": "请在创建代理前选择提供商和模型",
@@ -243,6 +246,9 @@
   "com_endpoint_reasoning_effort": "推理强度",
   "com_endpoint_save_as_preset": "保存为预设",
   "com_endpoint_search": "按名称搜索渠道",
+  "com_endpoint_search_var": "Search {{0}}...",
+  "com_endpoint_search_models": "Search models...",
+  "com_endpoint_search_endpoint_models": "Search {{0}} models...",
   "com_endpoint_set_custom_name": "设置一个自定义名称，以便您检索此预设",
   "com_endpoint_skip_hover": "跳过补全步骤，检查最终答案和生成步骤",
   "com_endpoint_stop": "停止序列",
@@ -319,6 +325,7 @@
   "com_nav_enabled": "启用",
   "com_nav_engine": "引擎",
   "com_nav_enter_to_send": "按下 Enter 键发送消息",
+  "com_nav_center_chat_input": "屏幕中心的欢迎提示",
   "com_nav_export": "导出",
   "com_nav_export_all_message_branches": "导出所有消息分支",
   "com_nav_export_conversation": "导出对话",
@@ -462,13 +469,20 @@
   "com_ui_admin_access_warning": "禁用管理员对此功能的访问可能会导致界面出现异常，需要刷新页面。如果保存此设置，唯一的恢复方式是通过 librechat.yaml 配置文件中的界面设置进行修改，这将影响所有角色。",
   "com_ui_admin_settings": "管理员设置",
   "com_ui_advanced": "进阶",
+  "com_ui_advanced_settings": "进阶设置",
   "com_ui_agent": "代理",
+  "com_ui_agent_chain": "Agent Chain (Mixture-of-Agents)",
+  "com_ui_agent_chain_info": "Enables creating sequences of agents. Each agent can access outputs from previous agents in the chain. Based on the \"Mixture-of-Agents\" architecture where agents use previous outputs as auxiliary information.",
+  "com_ui_agent_chain_max": "You have reached the maximum of {{0}} agents.",
   "com_ui_agent_delete_error": "删除代理时出现错误",
   "com_ui_agent_deleted": "代理已成功删除",
   "com_ui_agent_duplicate_error": "复制助手时发生错误",
   "com_ui_agent_duplicated": "助手复制成功",
   "com_ui_agent_editing_allowed": "其他用户已可以编辑此助手",
   "com_ui_agent_shared_to_all": "这里需要填入一些内容 之前是空的",
+  "com_ui_agent_recursion_limit": "Max Agent Steps",
+  "com_ui_agent_recursion_limit_info": "Limits how many steps the agent can take in a run before giving a final response. Default is 25 steps. A step is either an AI API request or a tool usage round. For example, a basic tool interaction takes 3 steps: initial request, tool usage, and follow-up request.",
+  "com_ui_agent_var": "{{0}} agent",
   "com_ui_agents": "代理",
   "com_ui_agents_allow_create": "允许创建助手",
   "com_ui_agents_allow_share_global": "允许与所有用户共享助手",
@@ -785,6 +799,12 @@
   "com_ui_view_source": "查看来源对话",
   "com_ui_yes": "是的",
   "com_ui_zoom": "缩放",
+  "com_ui_save_badge_changes": "Save badge changes?",
+  "com_ui_late_night": "深夜愉快",
+  "com_ui_weekend_morning": "周末愉快",
+  "com_ui_good_morning": "早上好",
+  "com_ui_good_afternoon": "下午好",
+  "com_ui_good_evening": "晚上好",
   "com_user_message": "您",
   "com_warning_resubmit_unsupported": "此终端不支持重新提交AI消息"
 }
